testdata/positive/comparison_ops.rs
fn main() {
    let a = 5 < 10;
    let b = 10 > 5;
    let c = 7 == 7;
    let d = 3 == 4;
}

