testdata/negative/bad_operator.rs
fn main() {
    let x = 5 @ 3; // Неверный оператор
}